Changelog
=========

2020.3.0rc2 (unreleased)
------------------------

- Improve performance when resolving large dossiers. [deiferni]
- Add attributes `review_state`, `is_subdossier` and `is_leafnode` to the search results returned by `@solrsearch` and `@livesearch`. [mbaechtold]
- Add attribute `is_subdossier` to the children for GET requests to the API. [mbaechtold]
- Add is_subdossier to catalog metadata. [deiferni]
- Add Bumblebee auto refresh feature to policy template. [2e12]
- Task GET API: Also include info about containing dossier. [mbaechtold]
- Enhance the API endpoint `@breadcrumbs` with more attributes. [mbaechtold]
- Add key `is_leafnode` to the API endpoint `@navigation`. [mbaechtold]
- Fix `task_type_helper` to respect the current language for the ram-cache. [elioschmutz]
- Always use Solr for tabbedview listings. [buchi]
- Enable Solr by default. [buchi]
- Fix exclusion of search root when using Solr. [buchi]
- Add retention_expiration to Solr schema. [buchi]
- Add support for date range queries using Solr. [buchi]
- Add support for contact lookup by email2 using Solr. [buchi]
- Fix title format in OGDS UsersContactsInboxesSource using Solr. [buchi]
- Fix indexing of documents in Solr integration tests. [buchi]
- Avoid filtering or sorting on fields that do not exist in Solr. [buchi]
- Implement pagination for Solr based listings. [buchi]
- Fix bug in table source of trashed documents when using solr. [njohner]
- Fix bug in search view not respecting batch size when solr is deactivated and change default batch size with Solr to 25. [njohner]
- Extend the ftw.mail.mail workflow with teamraum specific roles. [elioschmutz]
- Extend the `meeting.json`, which will be generated for an exported meeting, with a `agenda_item_list` property which contains a link to the agenda item list document. [elioschmutz]