@@ -192,10 +192,13 @@ class TestRepositoryFavoritesPost(IntegrationTestCase):
              u'admin_unit': u'Hauptmandant',
              u'favorite_id': 1,
              u'icon_class': u'icon-docx',
+             u'is_leafnode': None,
+             u'is_subdossier': None,
              u'oguid': u'plone:1014073300',
              u'uid': IUUID(self.document),
              u'portal_type': u'opengever.document.document',
              u'position': None,
+             u'review_state': None,
              u'target_url': u'http://nohost/plone/resolve_oguid/plone:1014073300',
              u'title': u'Vertr\xe4gsentwurf',
              u'tooltip_url': u'http://nohost/plone/resolve_oguid/plone:1014073300/tooltip'},
